# nm_boostpyton

./: CMakeLists.txt  README.md  library.cpp  nm_bp_numpy.cpp  nm_bp_numpy.h
py_wheel/: create_whl_auto_install.sh  setup.py
py_wheel/nm_boostpython.egg-info/: SOURCES.txt
py_wheel/test/: test_package.py
